Darkness: remove Mechanon spawns
refs #337

--- a/mod/area/darkness002.git.yml
+++ b/mod/area/darkness002.git.yml
@@ -188,21 +188,18 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 23}
         CR: {type: :float, value: 8.0}
-        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: bodak}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 147}
         CR: {type: :float, value: 8.0}
-        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: grssererschatten}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
         Appearance: {type: :int, value: 123}
         CR: {type: :float, value: 9.0}
-        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: mohrg}
         SingleSpawn: {type: :byte, value: 0}
     Difficulty: {type: :int, value: 0}
@@ -260,91 +257,6 @@ Encounter List:
     TemplateResRef: {type: :resref, value: untote_unmoglich}
     XPosition: {type: :float, value: 61.4047}
     YPosition: {type: :float, value: 42.6682}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1371}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: mechano_spider}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1372}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: mechano_saw}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1370}
-        CR: {type: :float, value: 9.0}
-        ResRef: {type: :resref, value: mechano_jugger}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 2}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.0581}
-        Y: {type: :float, value: 8.1556}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 3.2157}
-        Y: {type: :float, value: -0.429}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 3.3587}
-        Y: {type: :float, value: 5.4622}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.1374}
-        Y: {type: :float, value: 8.065}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Mechanons, schwer
-    MaxCreatures: {type: :int, value: 4}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 60}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 80.434}
-        Y: {type: :float, value: 87.7129}
-        Z: {type: :float, value: 0.0}
-    Tag: {type: :cexostr, value: mecha_hard}
-    TemplateResRef: {type: :resref, value: mecha_hard}
-    XPosition: {type: :float, value: 83.336}
-    YPosition: {type: :float, value: 40.6821}
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
@@ -419,178 +331,6 @@ Encounter List:
     TemplateResRef: {type: :resref, value: untote_normal}
     XPosition: {type: :float, value: 64.7056}
     YPosition: {type: :float, value: 73.0708}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1371}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: mechano_spider}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1372}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: mechano_saw}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1370}
-        CR: {type: :float, value: 9.0}
-        ResRef: {type: :resref, value: mechano_jugger}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 2}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.0085}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 5.9179}
-        Y: {type: :float, value: 0.0429}
-        Z: {type: :float, value: 0.0203}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 6.0515}
-        Y: {type: :float, value: 3.429}
-        Z: {type: :float, value: 0.0234}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.5836}
-        Y: {type: :float, value: 3.0603}
-        Z: {type: :float, value: 0.0235}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Mechanons, schwer
-    MaxCreatures: {type: :int, value: 5}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 3}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 60}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 8.3648}
-        Y: {type: :float, value: 42.1199}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 16.8881}
-        Y: {type: :float, value: 90.1625}
-        Z: {type: :float, value: 0.0}
-    Tag: {type: :cexostr, value: mecha_hard}
-    TemplateResRef: {type: :resref, value: mecha_hard}
-    XPosition: {type: :float, value: 41.5919}
-    YPosition: {type: :float, value: 73.5953}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1371}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: mechano_spider}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1372}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: mechano_saw}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1370}
-        CR: {type: :float, value: 9.0}
-        ResRef: {type: :resref, value: mechano_jugger}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 3}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -1.7817}
-        Y: {type: :float, value: 8.9129}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 3.4571}
-        Y: {type: :float, value: -0.058}
-        Z: {type: :float, value: -0.075}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.9096}
-        Y: {type: :float, value: 10.1998}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Mechanons, schwer
-    MaxCreatures: {type: :int, value: 6}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 3}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 60}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 29.2171}
-        Y: {type: :float, value: 13.0777}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 82.6883}
-        Y: {type: :float, value: 83.5881}
-        Z: {type: :float, value: -0.0}
-    Tag: {type: :cexostr, value: mecha_hard}
-    TemplateResRef: {type: :resref, value: mecha_hard}
-    XPosition: {type: :float, value: 23.5466}
-    YPosition: {type: :float, value: 46.5513}
     ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
@@ -789,86 +529,6 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 1371}
-        CR: {type: :float, value: 3.0}
-        ResRef: {type: :resref, value: mechano_spider}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1372}
-        CR: {type: :float, value: 5.0}
-        ResRef: {type: :resref, value: mechano_saw}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 1370}
-        CR: {type: :float, value: 9.0}
-        ResRef: {type: :resref, value: mechano_jugger}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 1}
-    DifficultyIndex: {type: :int, value: 1}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -1.7817}
-        Y: {type: :float, value: 8.9129}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 3.4571}
-        Y: {type: :float, value: -0.058}
-        Z: {type: :float, value: -0.075}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 2.9096}
-        Y: {type: :float, value: 10.1998}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Mechanons, schwer
-    MaxCreatures: {type: :int, value: 4}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 4}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 60}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 71.0237}
-        Y: {type: :float, value: 47.8657}
-        Z: {type: :float, value: 0.0}
-    Tag: {type: :cexostr, value: mecha_hard}
-    TemplateResRef: {type: :resref, value: mecha_hard}
-    XPosition: {type: :float, value: 24.176}
-    YPosition: {type: :float, value: 54.0622}
-    ZPosition: {type: :float, value: -0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
         Appearance: {type: :int, value: 172}
         CR: {type: :float, value: 3.0}
         ResRef: {type: :resref, value: gruftschrecken}
@@ -970,6 +630,110 @@ Encounter List:
     TemplateResRef: {type: :resref, value: untote_schwer}
     XPosition: {type: :float, value: 51.6172}
     YPosition: {type: :float, value: 56.3291}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 186}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: allip}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 70}
+        CR: {type: :float, value: 3.0}
+        ResRef: {type: :resref, value: erf_skelettkrieg}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 187}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: todesalb}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 195}
+        CR: {type: :float, value: 5.0}
+        ResRef: {type: :resref, value: zombie}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 23}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: bodak}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 147}
+        CR: {type: :float, value: 8.0}
+        ResRef: {type: :resref, value: grssererschatten}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 123}
+        CR: {type: :float, value: 9.0}
+        ResRef: {type: :resref, value: mohrg}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -7.2642}
+        Y: {type: :float, value: -0.226}
+        Z: {type: :float, value: 0.0054}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0232}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.2308}
+        Y: {type: :float, value: 4.2048}
+        Z: {type: :float, value: 0.0242}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -7.2437}
+        Y: {type: :float, value: 4.0754}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: "Untote, unm\xF6glich"
+    MaxCreatures: {type: :int, value: 8}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 8}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 3600}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 30.8902}
+        Y: {type: :float, value: 15.9151}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Untote_unmoeglich}
+    TemplateResRef: {type: :resref, value: untote_unmoglich}
+    XPosition: {type: :float, value: 48.4168}
+    YPosition: {type: :float, value: 73.0734}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
