move Goblins away from halfling bunks
refs #342

--- a/mod/area/hin_03.git.yml
+++ b/mod/area/hin_03.git.yml
@@ -38,7 +38,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -90,7 +90,6 @@ Encounter List:
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 7
     Active: {type: :byte, value: 1}
-    Comment: {type: :cexostr, value: ""}
     CreatureList: 
       type: :list
       value: 
@@ -98,7 +97,6 @@ Encounter List:
         __struct_id: 0
         Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
-        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -192,190 +190,6 @@ Encounter List:
     TemplateResRef: {type: :resref, value: rotwild}
     XPosition: {type: :float, value: 92.1001}
     YPosition: {type: :float, value: 82.3244}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 1.0}
-        ResRef: {type: :resref, value: goblin}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: erf_goblin}
-        SingleSpawn: {type: :byte, value: 1}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 87}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: goblinkrieger}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: goblinschtze}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -11.8627}
-        Y: {type: :float, value: -0.4417}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -11.8023}
-        Y: {type: :float, value: -3.9876}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -0.1808}
-        Y: {type: :float, value: -3.3519}
-        Z: {type: :float, value: 0.0226}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.0226}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Goblin, normal
-    MaxCreatures: {type: :int, value: 6}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 1800}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 71.7863}
-        Y: {type: :float, value: 30.0546}
-        Z: {type: :float, value: 0.0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 28.9171}
-        Y: {type: :float, value: 35.2438}
-        Z: {type: :float, value: 1.4025}
-    Tag: {type: :cexostr, value: Goblin_normal}
-    TemplateResRef: {type: :resref, value: goblin_normal}
-    XPosition: {type: :float, value: 50.8765}
-    YPosition: {type: :float, value: 75.0991}
-    ZPosition: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 7
-    Active: {type: :byte, value: 1}
-    CreatureList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 1.0}
-        ResRef: {type: :resref, value: goblin}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: erf_goblin}
-        SingleSpawn: {type: :byte, value: 1}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 87}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: goblinkrieger}
-        SingleSpawn: {type: :byte, value: 0}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Appearance: {type: :int, value: 86}
-        CR: {type: :float, value: 2.0}
-        ResRef: {type: :resref, value: goblinschtze}
-        SingleSpawn: {type: :byte, value: 0}
-    Difficulty: {type: :int, value: 0}
-    DifficultyIndex: {type: :int, value: 2}
-    Faction: {type: :dword, value: 1}
-    Geometry: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -47.6863}
-        Y: {type: :float, value: -2.4642}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: -47.3949}
-        Y: {type: :float, value: -6.8659}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.3301}
-        Y: {type: :float, value: -6.0314}
-        Z: {type: :float, value: 0.025}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 1
-        X: {type: :float, value: 0.0}
-        Y: {type: :float, value: 0.0}
-        Z: {type: :float, value: 0.025}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: Goblin, normal
-    MaxCreatures: {type: :int, value: 6}
-    OnEntered: {type: :resref, value: ""}
-    OnExhausted: {type: :resref, value: ""}
-    OnExit: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    PlayerOnly: {type: :byte, value: 1}
-    RecCreatures: {type: :int, value: 2}
-    Reset: {type: :byte, value: 1}
-    ResetTime: {type: :int, value: 1800}
-    Respawns: {type: :int, value: -1}
-    SpawnOption: {type: :int, value: 0}
-    SpawnPointList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 57.7818}
-        Y: {type: :float, value: 71.7058}
-        Z: {type: :float, value: -0.0024}
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Orientation: {type: :float, value: -0.0}
-        X: {type: :float, value: 28.2959}
-        Y: {type: :float, value: 63.9066}
-        Z: {type: :float, value: -0.0024}
-    Tag: {type: :cexostr, value: Goblin_normal}
-    TemplateResRef: {type: :resref, value: goblin_normal}
-    XPosition: {type: :float, value: 53.3254}
-    YPosition: {type: :float, value: 7.3139}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
@@ -1770,7 +1584,7 @@ SoundList:
     VolumeVrtn: {type: :byte, value: 0}
     XPosition: {type: :float, value: 15.6819}
     YPosition: {type: :float, value: 45.8511}
-    ZPosition: {type: :float, value: -0.0}
+    ZPosition: {type: :float, value: 0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 6
     Active: {type: :byte, value: 1}
