--- a/mod/area/wildnis_03.git.yml
+++ b/mod/area/wildnis_03.git.yml
@@ -37,7 +37,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -99,7 +99,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -162,7 +162,7 @@ Door List:
     DisarmDC: {type: :byte, value: 15}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 16}
-    GenericType: {type: :byte, value: 0}
+    GenericType_New: {type: :dword, value: 0}
     HP: {type: :short, value: 80}
     Hardness: {type: :byte, value: 5}
     Interruptable: {type: :byte, value: 1}
@@ -220,14 +220,16 @@ Encounter List:
       value: 
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 859}
         CR: {type: :float, value: 0.5}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: hirsch002}
         SingleSpawn: {type: :byte, value: 1}
       - !nwn-lib.elv.es,2008-12/struct 
         __struct_id: 0
-        Appearance: {type: :int, value: 35}
+        Appearance: {type: :int, value: 858}
         CR: {type: :float, value: 0.5}
+        Comment: {type: :cexostr, value: ""}
         ResRef: {type: :resref, value: hirsch001}
         SingleSpawn: {type: :byte, value: 0}
       - !nwn-lib.elv.es,2008-12/struct 
@@ -412,6 +414,255 @@ Encounter List:
     TemplateResRef: {type: :resref, value: dachs}
     XPosition: {type: :float, value: 34.8418}
     YPosition: {type: :float, value: 45.9985}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: goblin}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: erf_goblin}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 87}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: goblinkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: goblinschtze}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -49.2923}
+        Y: {type: :float, value: -20.4288}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -26.0765}
+        Y: {type: :float, value: -18.9321}
+        Z: {type: :float, value: 0.0274}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -10.3105}
+        Y: {type: :float, value: -12.376}
+        Z: {type: :float, value: 0.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -1.4824}
+        Y: {type: :float, value: -0.0123}
+        Z: {type: :float, value: 0.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -39.0658}
+        Y: {type: :float, value: -2.1579}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -40.1859}
+        Y: {type: :float, value: -11.5061}
+        Z: {type: :float, value: 0.025}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Goblin, normal
+    MaxCreatures: {type: :int, value: 6}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 20.5948}
+        Y: {type: :float, value: 58.8345}
+        Z: {type: :float, value: 0.0157}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 78.2047}
+        Y: {type: :float, value: 82.1571}
+        Z: {type: :float, value: -0.0}
+    Tag: {type: :cexostr, value: Goblin_normal}
+    TemplateResRef: {type: :resref, value: goblin_normal}
+    XPosition: {type: :float, value: 76.3081}
+    YPosition: {type: :float, value: 129.7986}
+    ZPosition: {type: :float, value: 0.0}
+  - !nwn-lib.elv.es,2008-12/struct 
+    __struct_id: 7
+    Active: {type: :byte, value: 1}
+    CreatureList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 1.0}
+        ResRef: {type: :resref, value: goblin}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: erf_goblin}
+        SingleSpawn: {type: :byte, value: 1}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 87}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: goblinkrieger}
+        SingleSpawn: {type: :byte, value: 0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 0
+        Appearance: {type: :int, value: 86}
+        CR: {type: :float, value: 2.0}
+        ResRef: {type: :resref, value: goblinschtze}
+        SingleSpawn: {type: :byte, value: 0}
+    Difficulty: {type: :int, value: 0}
+    DifficultyIndex: {type: :int, value: 2}
+    Faction: {type: :dword, value: 1}
+    Geometry: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: -1.2387}
+        Y: {type: :float, value: -17.4221}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 14.1886}
+        Y: {type: :float, value: -22.694}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 28.3882}
+        Y: {type: :float, value: -21.8659}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 56.7129}
+        Y: {type: :float, value: -22.1803}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 77.9098}
+        Y: {type: :float, value: -22.0689}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 95.7284}
+        Y: {type: :float, value: -7.6604}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 93.595}
+        Y: {type: :float, value: -2.9531}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 82.7583}
+        Y: {type: :float, value: -4.5769}
+        Z: {type: :float, value: 0.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 71.8744}
+        Y: {type: :float, value: -12.3285}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 62.5047}
+        Y: {type: :float, value: -11.6833}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 52.9489}
+        Y: {type: :float, value: -6.5913}
+        Z: {type: :float, value: 0.0226}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 33.1297}
+        Y: {type: :float, value: -5.1911}
+        Z: {type: :float, value: 0.0256}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 13.9686}
+        Y: {type: :float, value: -4.5414}
+        Z: {type: :float, value: 0.025}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 1
+        X: {type: :float, value: 0.0}
+        Y: {type: :float, value: 0.0}
+        Z: {type: :float, value: 0.0226}
+    LocalizedName: 
+      type: :cexolocstr
+      value: 
+        0: Goblin, normal
+    MaxCreatures: {type: :int, value: 6}
+    OnEntered: {type: :resref, value: ""}
+    OnExhausted: {type: :resref, value: ""}
+    OnExit: {type: :resref, value: ""}
+    OnHeartbeat: {type: :resref, value: ""}
+    OnUserDefined: {type: :resref, value: ""}
+    PlayerOnly: {type: :byte, value: 1}
+    RecCreatures: {type: :int, value: 2}
+    Reset: {type: :byte, value: 1}
+    ResetTime: {type: :int, value: 1800}
+    Respawns: {type: :int, value: -1}
+    SpawnOption: {type: :int, value: 0}
+    SpawnPointList: 
+      type: :list
+      value: 
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 27.2652}
+        Y: {type: :float, value: 71.2871}
+        Z: {type: :float, value: -0.0}
+      - !nwn-lib.elv.es,2008-12/struct 
+        __struct_id: 2
+        Orientation: {type: :float, value: -0.0}
+        X: {type: :float, value: 61.2817}
+        Y: {type: :float, value: 38.1494}
+        Z: {type: :float, value: 0.01}
+    Tag: {type: :cexostr, value: Goblin_normal}
+    TemplateResRef: {type: :resref, value: goblin_normal}
+    XPosition: {type: :float, value: 3.1806}
+    YPosition: {type: :float, value: 23.2349}
     ZPosition: {type: :float, value: 0.0}
 List: 
   type: :list
